cloudformationl.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: A simple CloudFormation template to create two EC2 instances - one with Docker, Docker Compose, and Git installed, and another with Jenkins installed

Parameters:
  InstanceType:
    Description: The type of EC2 instance to create
    Type: String
    Default: t2.medium

Resources:  
  EC2SecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

  EC2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: my-key-pair
      SecurityGroups:
        - !Ref EC2SecurityGroup1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install Docker
          sudo apt-get update
          sudo apt-get install -y docker.io

          # Install Docker Compose
          sudo curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          sudo chmod +x /usr/local/bin/docker-compose

          # Install Git
          sudo apt-get install -y git
           
  EC2SecurityGroup2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
          
  EC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: my-key-pair
      SecurityGroups:
        - !Ref EC2SecurityGroup2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install Jenkins
          wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
          sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
          sudo apt-get update
          sudo apt-get install -y jenkins
